--- a/package.json
+++ b/package.json
@@ -9,6 +9,21 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.5"
+    "@astrojs/mdx": "^4.3.13",
+    "@astrojs/react": "^4.4.2",
+    "@astrojs/sitemap": "^3.6.0",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "astro": "^5.16.5",
+    "astro-seo": "^0.8.4",
+    "framer-motion": "^12.23.26",
+    "gsap": "^3.14.1",
+    "lucide-astro": "^0.556.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-icons": "^5.5.0",
+    "swiper": "^12.0.3",
+    "tailwindcss": "^4.1.17"
   }
 }
