--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^19.2.3",
     "astro": "^5.16.5",
     "astro-seo": "^0.8.4",
+    "astro-seo-plugin": "^1.3.5",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.1",
     "lucide-astro": "^0.556.0",
