--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-    "rewrites": [
+    "redirects": [
         {
-            "source": "/(.*)",
-            "destination": "/"
+            "source": "/",
+            "destination": "/es",
+            "permanent": false
         }
     ]
 }
